# ultranarrow-superradiant-lasing-model

./: .gitignore  CALIBRATION.md  README.md  RESULTS.md  pyproject.toml
configs/: our_clock.yaml  paper_2021.yaml
results/: compare_paper_2021_vs_our_clock.csv
results/our_clock/: atom_number_scan_eta_6p0.csv  cavity_coupling_scan_N_2e06_eta_6p0.csv  cavity_coupling_scan_N_2p2e05_eta_6p0.csv  cavity_pulling.csv  cavity_pulling_eta_6p0.csv  compare_cached.csv  figure3_sweep.npz  frequency_sensitivity_eta_6p0.csv  narrow_filter_eta_6_chi_1_step_0p5_summary.csv  turn_on_transient_eta_6.csv  turn_on_transient_eta_6_mj_equal_mixture.csv  turn_on_transient_eta_6_mj_equal_mixture_summary.csv  turn_on_transient_eta_6_summary.csv  zeeman_scan_eta_6p0.csv
results/paper_2021/: cavity_pulling.csv  figure3_sweep.csv  figure3_sweep.npz
scripts/: cavity_pulling.py  compare_configs.py  convention_sensitivity.py  frequency_sensitivity.py  linewidth_root_diagnostic.py  linewidth_terms.py  make_figure3.py  narrow_filter_scan.py  pump_scale_continuation.py  pump_scale_scan.py  scan_atom_number.py  scan_branch_table.py  scan_branches.py  scan_cavity_coupling.py  scan_zeeman_splitting.py  solve_full_no_drive.py  solve_full_nocoherence.py  turn_on_transient.py
src/moelmer_model/: __init__.py  config.py  full_meanfield.py  linewidth.py  model.py  observables.py  reduced_model.py  spectrum.py  sweeps.py  units.py
tests/: test_branch_search.py  test_config.py  test_full_meanfield.py  test_linewidth.py  test_reduced_model.py
